bug: #97 조회 버그 수정, 특정 트레이너 조회 기능 추가